--- a/BlazorApp3/Shared/NavMenu.razor
+++ b/BlazorApp3/Shared/NavMenu.razor
@@ -11,7 +11,7 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
-        </li> 
+        </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="locations">
                 <span class="oi oi-plus" aria-hidden="true"></span>  Locations
@@ -24,6 +24,16 @@
         </li>
 
     </ul>
+    <a class="near" href="https://github.com/Dontletmein/COVID-19-website/"><button><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub-Mark" width="8%" height="8%">GitHub</button></a>
+    <p class="ending">
+
+        <br />
+        This site is developed by a <a href="https://github.com/Dontletmein/COVID-19-website/blob/master/README.md">volunteer team</a> for non-commercial use only.
+        <br />
+        We acknowledge the efforts of doctors, nurses, and other healthcare professionals.
+        <br />
+        We also acknowledge all the contributions by the people around the world, in fight against this pandemic.
+    </p>
 </div>
 
 @code {
