--- a/BlazorApp3/wwwroot/css/site.css
+++ b/BlazorApp3/wwwroot/css/site.css
@@ -7,7 +7,26 @@ html, body {
 a, .btn-link {
     color: #0366d6;
 }
-
+.near {
+    background: #eb94d0;
+    position: absolute;
+    bottom: 1;
+}
+.button {
+    background: #eb94d0;
+    position: relative;
+    border-radius: 30px;
+    padding: 50px 10px;
+}
+.ending{
+    position: absolute;
+    bottom: 0;
+    margin-left: 1rem;
+    margin-right: 2rem;
+    color: black;
+    font-size: 9px;
+    text-align: center;
+}
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
@@ -123,7 +142,7 @@ app {
     }
 
     .sidebar {
-        width: 200px;
+        width: 250px;
         height: 100vh;
         position: sticky;
         top: 0;
