--- a/BlazorApp3/Shared/NavMenu.razor
+++ b/BlazorApp3/Shared/NavMenu.razor
@@ -24,16 +24,19 @@
         </li>
 
     </ul>
-    <a class="near" href="https://github.com/Dontletmein/COVID-19-website/"><button><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub-Mark" width="8%" height="8%">GitHub</button></a>
-    <p class="ending">
+    <div style="text-align:center">
+        <p class="ending">
+            <a href="https://github.com/Dontletmein/COVID-19-website/" class="myButton"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub-Mark" width="20px" height="20px">GitHub</a>
 
-        <br />
-        This site is developed by a <a href="https://github.com/Dontletmein/COVID-19-website/blob/master/README.md">volunteer team</a> for non-commercial use only.
-        <br />
-        We acknowledge the efforts of doctors, nurses, and other healthcare professionals.
-        <br />
-        We also acknowledge all the contributions by the people around the world, in fight against this pandemic.
-    </p>
+            <br />
+            This site is developed by a <a href="https://github.com/Dontletmein/COVID-19-website/blob/master/README.md">volunteer team</a> for non-commercial use only.
+            <br />
+            We acknowledge the efforts of doctors, nurses, and other healthcare professionals.
+            <br />
+            We also acknowledge all the contributions by the people around the world, in fight against this pandemic.
+        </p>
+    </div>
+    
 </div>
 
 @code {
