--- a/BlazorApp3/Shared/NavMenu.razor
+++ b/BlazorApp3/Shared/NavMenu.razor
@@ -13,12 +13,12 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="locations">
+            <NavLink class="nav-link" href="error">
                 <span class="oi oi-plus" aria-hidden="true"></span>  Locations
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="cases">
+            <NavLink class="nav-link" href="error" >
                 <span class="oi oi-plus" aria-hidden="true"></span>  Cases
             </NavLink>
         </li>
